# KuGouApp

./: .gitignore  AdvertiseBoard.cpp  AdvertiseBoard.h  CMakeLists.txt  CMakeUserPresets.json  GLTabWidget.cpp  GLTabWidget.h  KuGouApp.cpp  KuGouApp.h  KuGouApp.ui  MusicItemWidget.cpp  README.md  Res.qrc  TableWidget.cpp  TableWidget.h  main.cpp  style.css
AdvertiseBoardWidget/: AdvertiseBoard.cpp  AdvertiseBoard.h  CMakeLists.txt
BasicWidget/: CMakeLists.txt  CenterWidget.cpp  CenterWidget.h  PlayWidget.cpp  PlayWidget.h  TitleWidget.cpp  TitleWidget.h
GuessLoveWidget/: CMakeLists.txt  GLTabWidget.cpp  GLTabWidget.h
KuGouStart/: CMakeLists.txt  KuGouApp.cpp  KuGouApp.h  KuGouApp.ui  Res.qrc
KuGouStart/LocalDownload/: CMakeLists.txt  LocalDownload.cpp  LocalDownload.h  LocalDownload.ui  local.css
KuGouStart/RecommendForYou/: CMakeLists.txt  RecommendForYou.cpp  RecommendForYou.h  RecommendForYou.ui  recommend.css
KuGouStart/Res/: style.css
KuGouStart/Res/styles/: original.css
MainWindow/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  WaterDrop.cpp  WaterDrop.h
MusicItemWidget/: CMakeLists.txt  MusicItemWidget.cpp  MusicItemWidget.h  item.css
MusicLyric/: AGA - 一-7438097d92ac82a13553d1e60d91a09d-209571261-00000000.krc  Ailee - HEAVEN-7120d2d8497251682672d0551888c3a0-188850104-00000000.krc  BLACKPINK - 휘파람-b0a50dfdd1d814d85bff1bd308aebd29-126485425-00000000.krc  CREAM - 455-7b5ee5f2f336954fe35ce11986cd8450-167537741-00000000.krc  CatchMoon - 关键词-dad4d018bd1836bfb7ef2774c51c040f-217033080-00000000.krc  Charlie Puth、Kehlani - Done for Me(feat. Kehlani)-310acb6ffccb3e0fc43fb4ae0bb3da28-163217045-00000000.krc  Claire Rosinkranz - Hotel-f1ef1688964fcd06b3667c4b7a758435-170328042-00000000.krc  EXO - Baby Don't Cry (인어의 눈물)-dbdb83e920a7b584bab6a1b7edba3b82-139301119-00000000.krc  G.E.M. 邓紫棋 - 冰河时代-af805ee7879c421ee00d196f017a2e60-161120264-00000000.krc  LBI利比（时柏尘）、Sasablue - 梁山伯与茱丽叶-811443d1d23e605003b7b9a154316f8c-196565004-00000000.krc  MC 张天赋 - How Many Times-796b730d55dd1085d8e826fd99ced95b-191985026-00000000.krc  Michael Calfan、INNA - Call Me Now-4af4b4013005f5ccfd882476f52f57a5-212209635-00000000.krc  Rain And foam - Emergency-e4a87dcba54f5bb8d40622eeb1cad3c9-204590416-00000000.krc  Regard、Troye Sivan、Tate McRae - You-c482eea623d25c46869565e14c2105b1-163217273-00000000.krc  Wilmer、RJ Pasin - Time to Go-b932d54a947b0a169d31f40133dc3589-208708359-00000000.krc  Wonder Girls - Tell me-5648963c0a09fd30cef97db2608dccb1-191985071-0000000F.krc  ZAFUR - 凌晨的海-a0ae1167585f5599600bea69e8eb7f0e-170793819-00000000.krc  dior大穎 - 如果那通电话有接通-642295389a76b90f6452f83f3c5f1ce6-203204786-00000000.krc  en - 下雨天-8af302f42f4317f9ed5d9880d216a62a-206239249-00000000.krc  en - 大眠-7826e9a77fc16bd0cc78e2906df1d42b-186717721-00000000.krc  en - 天若有情-254aa40185472937eebf8b9e8734b4a2-132728461-00000000.krc  en - 如果爱忘了-1f3fab2ec62745fd218d8905c248f117-186805795-00000000.krc  en - 我知道你很难过-ea6d57ab79aa57f35b30db0f84bc26a4-206760451-00000000.krc  en - 淘汰-f5f01a8dd124cb3689426fa369de23f9-171884710-00000000.krc  southernwade、Wade Hampton、Zac Poor、Louis Matos - One More-42c604be56f4f84286d1497f084d0ba1-163175964-00000000.krc  俞更寅、高卿尘Nine、米卡、尹浩宇Patrick、张星特 - 你就不要想起我-034c73e210f0db1139293cbfe80ddc32-163400119-00000000.krc  兰音Reine - 坠落-01a1ce84314e7a2249c0dc2da7976bfe-173575773-00000000.krc  单依纯 - Soap-dea3ac0068045db115ffda9232233660-191982289-00000000.krc  单依纯 - 情人-ef407fe65645e0733316751fbf2f2796-168276468-00000000.krc  单循 - 被风翻开的秘密-f7e7833f75f36806da6d717320229a55-163503099-00000000.krc  吉克隽逸、姚晓棠 - 下一次爱情来的时候-7bb9a2ffefdfa09fcf5de8e1299330b8-202392116-00000000.krc  周杰伦 - 不爱我就拉倒-51038bffb3e6cdba2ef612ffe9b4cf7e-147861666-00000000.krc  周杰伦、张惠妹 - 不该-fcf336e81da45a8e696032ffc1708175-142920207-00000000.krc  周柏豪 - 我不要被你记住-a48b6aa32290cd8f415a355fc9cfefee-192002668-00000000.krc  周笔畅、杨千嬅、单依纯 - 高山低谷-5cd6898c43ba1a169da8bc700a162153-205272856-00000000.krc  塞西尔 - 坎农-deeb4e2e5cb32ddfced0aed14b057b33-129052234-00000000.krc  小时姑娘 - 爱殇-5d582db7fb8cd386598919f9d35cb5ca-210069760-00000000.krc  张新华 - 吻痕-be5639393374ba5a6b187f329ee1b7a7-213050110-00000000.krc  张远 - 青鸟-aa6d51c40acc2edfd240f65e762bdf8c-217095696-00000000.krc  新秀 - 了不起-ce9056ae09fd732bf6760235ba390705-205529719-00000000.krc  (+24 more)
MusicTableWidget/: CMakeLists.txt  TableWidget.cpp  TableWidget.h
MyMenu/: CMakeLists.txt  MyMenu.cpp  MyMenu.h  menu.css
MyScrollArea/: CMakeLists.txt  MyScrollArea.cpp  MyScrollArea.h
MySearchLineEdit/: CMakeLists.txt  MySearchLineEdit.cpp  MySearchLineEdit.h
RippleButton/: CMakeLists.txt  RippleButton.cpp  RippleButton.h
SMaskWidget/: CMakeLists.txt  SMaskWidget.cpp  SMaskWidget.h
SliderWidget/: CMakeLists.txt  SliderWidget.cpp  SliderWidget.h  slider.css
TitlePlayWidget/: CMakeLists.txt  TitleWidget.cpp
TitleWidget/: CMakeLists.txt  TitleWidget.cpp
UpToolButton/: CMakeLists.txt  UpToolButton.cpp  UpToolButton.h
VolumeToolBtn/: CMakeLists.txt  VolumeToolBtn.cpp  VolumeToolBtn.h
libvlc-3.0.20/include/vlc/: libvlc_media.h
